--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
     padding:0px;
   }
   body,html{
-    overflow-x: hidden;
-    height: 100%;
+    overflow: hidden;
+    height: 99.5%;
     width: 100vw;
     
     background: url(https://i0.wp.com/www.iparh.com/wp-content/uploads/2018/06/fundo-azul-curvas-escuro.jpg?ssl=1);
@@ -77,6 +77,7 @@
     width: 90%;
     margin: auto;
     padding: 3px;
+    height: 80vh;
     
     
     
@@ -85,6 +86,7 @@
     margin: 10px;
     padding: 5px;
     text-align: center;
+    height: 80vh;
     
   }
   
@@ -94,7 +96,8 @@
   section > p {
     padding: 5px;
   }
+  
   iframe{
-    width: 89%;
-    height: 700px;
+    width: 90vw;
+    height: 87%;
   }
